avance de bitacora y reporte

--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/bitacora.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/bitacora.xhtml
@@ -18,39 +18,48 @@
         <div class="EmptyBox5"></div>
         <p:panel>
             <h:form id="consultaForm">
-                <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
-                    <p:outputLabel value="Esta ayuda sirve un monton"/>
-                </p:dialog>
-                <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>
                 <div class="EmptyBox20"></div>
                 <p:panelGrid columns="4">
                     <p:outputLabel for="desde" value="Fecha desde:"></p:outputLabel>
                     <p:calendar id="desde" value="#{bitacoraController.desde}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha desde" placeholder="dd/mm/yyyy" yearRange="c-20:c+0" navigator="true"></p:calendar>
                     <p:outputLabel for="hasta" value="hasta:"></p:outputLabel>
                     <p:calendar id="hasta" value="#{bitacoraController.hasta}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha hasta" placeholder="dd/mm/yyyy" yearRange="c-20:c+0" navigator="true"></p:calendar>
+                    <p:commandButton value="generar" actionListener="#{bitacoraController.fill()}" update="consulta" ajax="true"></p:commandButton>
                 </p:panelGrid>
                 <div class="EmptyBox20"></div>
-                <p:dataTable id="consulta"  var="car" value="#{bitacoraController.bitacoraList}" 
-                             reflow="true" paginatorPosition="bottom"
-                             >
+                <p:dataTable id="consulta" paginatorPosition="bottom" var="car" value="#{bitacoraController.listDatos}" 
+                             paginator="true" rows="10"
+                             paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                             rowsPerPageTemplate="10,20,40"
+                             reflow="true">
                     <p:column headerText="Accion" >
-                        #{car.bitAccion}
+                        #{car.accion}
                     </p:column>
                     <p:column headerText="Fecha" >
-                        <p:outputLabel value="#{car.bitFechaHoraIngreso}">
+                        <p:outputLabel value="#{car.fecha}">
                             <f:convertDateTime pattern="dd/MM/yyyy" ></f:convertDateTime>
                         </p:outputLabel>
                     </p:column>
                     <p:column headerText="Hora" >
-                        <p:outputLabel value="#{car.bitFechaHoraIngreso}">
+                        <p:outputLabel value="#{car.hora}">
                             <f:convertDateTime pattern="hh:mm a" ></f:convertDateTime>
                         </p:outputLabel>
                     </p:column>
                     <p:column headerText="Fuente de datos" >
-                        #{car.bitTabla}
+                        #{car.fuente}
                     </p:column>
                     <p:column headerText="Responsable" >
-                        #{car.bitTipoUsuario}
+                        <c:choose>
+                            <c:when test="#{car.responsable=='D'}">
+                                Docente
+                            </c:when>
+                            <c:when test="#{car.responsable=='A'}">
+                                Alumno
+                            </c:when>
+                            <c:otherwise>
+                            
+                            </c:otherwise>
+                        </c:choose>
                     </p:column>
                     <f:facet name="footer">
                         Total de Registros #{bitacoraController.totalTransacciones}
@@ -66,7 +75,7 @@
                             <f:selectItem itemLabel="Excel" itemValue="Excel" />
                             <f:selectItem itemLabel="PDF" itemValue="PDF" />
                         </p:selectOneRadio>
-                        <p:commandButton  value="Generar" action="#{bitacoraController.generarReporte()}" update="consulta"></p:commandButton>
+                        <p:commandButton  value="Generar" action="#{bitacoraController.generarReporte()}" update="consulta" ajax="false"></p:commandButton>
                         <p:commandButton value="Refrescar" action="#{bitacoraController.refresh()}" update="consulta"></p:commandButton>
                     </h:panelGrid>
                 </div>
